--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $board-column-scrollbar: rgba(0, 0, 0, 0.1);
 $board-column-scrollbar-thumb: rgba(0, 0, 0, 0.3);
 $board-column-title-input: rgba(0, 0, 0, 0.3);
 $board-btn-bg-back: rgba(0, 0, 0, 0.2);
+$board-color: rgba(0, 0, 0, 0.5);
 
 //font colors
 $font-white: rgba(255, 255, 255, 0.95);
@@ -32,6 +33,7 @@ $font-black: #000;
 //shadows & filters
 $box-shadow: 2px 4px 13px 0 rgba(0, 0, 0, 0.1);
 $shadow-color: rgba(60, 60, 60, 0.4);
+$theme-accent-transparent: rgba(255, 215, 64, 0.5);
 
 //breakpoints
 $mobile: 480px;
