--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -43,11 +43,10 @@
   }
 }
 
-.board__edit-button,
-.board__save-button {
+.board__edit-button {
   transition: transform 0.1s;
 
   &:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
 }
