--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -46,5 +46,5 @@ $dialog-confirmation-bg: linear-gradient(
   $theme-primary 0%,
   $color-white-2 20%,
   $color-white-2 80%,
-  $theme-primary 100%
+  $color-pink 100%
 );
