--- a/project-management-app/src/app/main/pages/test/test.component.html
+++ b/project-management-app/src/app/main/pages/test/test.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <input type="text" placeholder="Board Title" [(ngModel)]="boardTitle" />
 <button mat-stroked-button (click)="addBoard()">create board</button>
 <ng-container *ngIf="boards$ | async as boards">
@@ -101,5 +103,5 @@
     </li>
   </ul>
 </ng-container>
-
+<a routerLink="/auth">login</a>
 <ng-template #emptyBoards> BOARDS ARE EMPTY </ng-template>
