--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -24,6 +24,8 @@ $board-column-scrollbar: rgba(0, 0, 0, 0.1);
 $board-column-scrollbar-thumb: rgba(0, 0, 0, 0.3);
 $board-column-title-input: rgba(0, 0, 0, 0.3);
 $board-btn-bg-back: rgba(0, 0, 0, 0.2);
+$profile-user-bg: #7d5083;
+$profile-content-bg: rgba(255, 255, 255, 0.95);
 
 //font colors
 $font-white: rgba(255, 255, 255, 0.95);
