--- a/project-management-app/src/app/shared/components/form-field-password/form-field-password.component.html
+++ b/project-management-app/src/app/shared/components/form-field-password/form-field-password.component.html
@@ -1,4 +1,5 @@
-<app-form-field [type]="isPasswordShown ? typeText : typePassword" [control]="controlValue" [placeholder]="placeholder">
+<app-form-field [type]="isPasswordShown ? typeText : typePassword" [control]="controlValue" [placeholder]="placeholder"
+  [label]="label">
   <button type="button" mat-button class="form__field__btn" (click)="togglePasswordVisibility()">
     <mat-icon>{{ isPasswordShown ? 'visibility' : 'visibility_off'}}</mat-icon>
   </button>
