--- a/project-management-app/src/app/shared/components/form-field/form-field.component.html
+++ b/project-management-app/src/app/shared/components/form-field/form-field.component.html
@@ -1,4 +1,5 @@
 <mat-form-field class="form-field" appearance="outline">
+  <mat-label class="form-field__label" *ngIf="label">{{label}}</mat-label>
   <input matInput class="form-field__input" [type]="type" [formControl]="controlValue" [placeholder]="placeholder">
   <ng-content></ng-content>
 </mat-form-field>
