--- a/project-management-app/src/app/shared/components/header/header/header.component.scss
+++ b/project-management-app/src/app/shared/components/header/header/header.component.scss
@@ -9,7 +9,7 @@ $header-height: 9rem;
 }
 
 .header {
-  position: fixed;
+  position: relative;
   z-index: 50;
   padding: 0 3rem;
   border-bottom: 2px solid $color-white-2;
@@ -24,6 +24,9 @@ $header-height: 9rem;
   font-weight: 300;
 
   &.sticky {
+    position: sticky;
+    top: 0;
+    left: 0;
     background-color: $color-white-2;
     box-shadow: 0px 4px 6px 2px $shadow-color;
     height: 7rem;
