--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,10 +1,10 @@
 <div (click)="boardRout($event)">
   <mat-icon *ngIf="!boardEditMode" (click)="boardEditMode = true" title="Edit" class="board__edit-button">edit</mat-icon>
   <span *ngIf="!boardEditMode">&nbsp; {{ board?.title }}</span>
-  <form *ngIf="boardEditMode" class="example-form" [formGroup]="cardForm">
+  <form *ngIf="boardEditMode" [formGroup]="cardForm">
     <mat-icon title="Save" (click)="boardNameChange(boardTitleInput.value)" #titleInput class="board__save-button">save</mat-icon>
     <span>&nbsp;</span>
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="board-input-form">
       <mat-label >board title editing</mat-label>
       <input matInput type="text" formControlName="userTitle" #boardTitleInput>
       <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
