--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -30,8 +30,8 @@
   top: 1rem;
 }
 
-.example-form-field {
-  display: inline-block;
+.board__edit-button {
+  opacity: 0;
 }
 
 :host,
@@ -41,13 +41,29 @@
   &:hover {
     @extend %hover-pattern;
   }
+
+  &:hover .board__edit-button {
+    opacity: 1;
+    transition: opacity 1s;
+  }
 }
 
 .board__edit-button,
 .board__save-button {
-  transition: transform 0.1s;
+  transition: transform 0.2s;
 
   &:hover {
-    transform: scale(1.3);
+    transform: scale(1.5);
+  }
+}
+
+.board-input-form {
+  font-size: 3rem;
+  width: 500px;
+}
+
+@media screen and (max-width: $mobile) {
+  .board-input-form {
+    width: 250px;
   }
 }
