--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -30,7 +30,7 @@
   top: 1rem;
 }
 
-.board__edit-button {
+.board__edit-button.hide {
   opacity: 0;
 }
 
@@ -44,13 +44,13 @@
 
   &:hover .board__edit-button {
     opacity: 1;
-    transition: opacity 1s;
+    transition: opacity 0.5s;
   }
 }
 
 .board__edit-button,
 .board__save-button {
-  transition: transform 0.2s;
+  transition: transform 0.3s;
 
   &:hover {
     transform: scale(1.5);
@@ -65,5 +65,20 @@
 @media screen and (max-width: $mobile) {
   .board-input-form {
     width: 250px;
+  }
+}
+
+.board-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.board__title {
+  opacity: 0;
+
+  &.active {
+    opacity: 1;
   }
 }
