--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
-  <div class="main__container">
-    <h1>Boards</h1>
-    <div class="main__inner-container">
-      <app-board (click)="boardRout($event, board)" *ngFor="let board of boards" [board]="board"></app-board>
-    </div>
+<div class="main__container" (mousemove)="mouseMove()" (click)="mouseClick()">
+  <h1>Boards</h1>
+  <div class="main__inner-container">
+    <app-board (click)="boardRout($event, board)" *ngFor="let board of boards" [board]="board"
+    [mouseExisting]="mouseExisting"></app-board>
   </div>
+</div>
