--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -71,3 +71,10 @@
     border-radius: $border-radius;
   }
 }
+
+%hover-pattern {
+  border: solid 1px $theme-accent;
+  color: $theme-accent;
+  box-shadow: 0 0.8rem 0.8rem -0.4rem $theme-accent-transparent;
+  transform: translateY(-0.6rem);
+}
