--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -34,7 +34,13 @@
   }
 }
 
-@mixin scrollbar($width: 100%, $height: 100%) {
+@mixin scrollbar(
+  $width: 100%,
+  $height: 100%,
+  $scrollbar-radius: $border-radius,
+  $scrollbar-color: $board-column-scrollbar,
+  $thumb-color: $board-column-scrollbar-thumb
+) {
   &::-webkit-scrollbar-button {
     display: none;
   }
@@ -42,12 +48,12 @@
   &::-webkit-scrollbar {
     width: $width;
     height: $height;
-    background-color: $board-column-scrollbar;
-    border-radius: $border-radius;
+    background-color: $scrollbar-color;
+    border-radius: $scrollbar-radius;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $board-column-scrollbar-thumb;
+    background-color: $thumb-color;
     border-radius: $border-radius;
   }
 }
