--- a/project-management-app/src/scss/base/_base.scss
+++ b/project-management-app/src/scss/base/_base.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 @import url("https://fonts.googleapis.com/css2?family=Niconne&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
@@ -11,6 +12,8 @@ body {
 }
 
 html {
+  @include scrollbar(8px, 100%, 0, $theme-primary-transparent);
+
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 62.5%; //1 rem = 10px
