--- a/project-management-app/src/app/forms/components/form-submit/form-submit.component.scss
+++ b/project-management-app/src/app/forms/components/form-submit/form-submit.component.scss
@@ -1,12 +1,7 @@
 @import "variables";
 
 .form-submit {
-  width: 160px;
-  height: 60px;
+  width: 16rem;
+  height: 6rem;
   margin-bottom: 20px;
-
-  @media screen and (max-width: $mobile) {
-    width: 130px;
-    height: 50px;
-  }
 }
