--- a/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.scss
+++ b/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.scss
@@ -1,25 +1,69 @@
 @import "variables";
 @import "mixins";
 
+$icon-button-size: 4rem;
+
 @include dialog-container-style;
 
 :host {
   position: relative;
 }
 
-.input {
-  font-size: 4rem;
+.form {
+  &__title {
+    font-size: 3.4rem;
+    color: $font-black;
+    text-align: center;
+    margin-bottom: 3rem;
+    font-weight: 300;
+  }
 
-  line-height: 5.2rem;
-  background: none;
-  outline: none;
-  border: none;
-  text-align: center;
-  width: 100%;
-  color: $theme-primary-transparent;
+  &__input-block {
+    position: relative;
 
-  &:focus {
+    &:focus-within .clear-btn {
+      visibility: visible;
+    }
+  }
+
+  &__input {
+    font-size: 4rem;
+    line-height: 5.2rem;
+    background: none;
+    outline: none;
+    border: none;
+    text-align: center;
     color: $theme-primary;
+    border-bottom: 1px solid $theme-primary-transparent;
+
+    &:focus {
+      color: $theme-primary-transparent;
+    }
+  }
+
+  .clear-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: $icon-button-size;
+    height: $icon-button-size;
+    text-align: center;
+    visibility: hidden;
+
+    &__icon {
+      color: $theme-primary-transparent;
+      font-size: $icon-button-size;
+      line-height: $icon-button-size;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__alert {
+    font-size: 2rem;
+    text-align: center;
+    color: $theme-primary-transparent;
+    margin-bottom: 4rem;
   }
 }
 
@@ -36,13 +80,6 @@
   border-radius: 50rem;
   font-size: 2.2rem;
   font-weight: 300;
-}
-
-.alert {
-  font-size: 2rem;
-  text-align: center;
-  color: $theme-primary-transparent;
-  margin-bottom: 4rem;
 }
 
 .hidden {
