--- a/project-management-app/src/app/shared/components/header/header/header.component.scss
+++ b/project-management-app/src/app/shared/components/header/header/header.component.scss
@@ -9,7 +9,9 @@ $header-height: 9rem;
 }
 
 .header {
-  position: fixed;
+  position: sticky;
+  top: 0;
+  left: 0;
   z-index: 50;
   padding: 0 3rem;
   border-bottom: 2px solid $color-white-2;
