fix validation according to editBoardName rule

--- a/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.html
+++ b/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.html
@@ -14,7 +14,7 @@
       mat-icon-button
       class="clear-btn"
       [class]="{ hidden: !showClearButton }"
-      (click)="clearInput($event)"
+      (click)="clearInput()"
       (mousedown)="preventDefault($event)"
       appClickStopPropagation
     >
