--- a/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.scss
+++ b/project-management-app/src/app/shared/components/dialog-board-creation/dialog-board-creation.component.scss
@@ -33,8 +33,10 @@ $icon-button-size: 4rem;
     outline: none;
     border: none;
     text-align: center;
+    width: 100%;
     color: $theme-primary;
     border-bottom: 1px solid $theme-primary-transparent;
+    padding-right: 5rem;
 
     &:focus {
       color: $theme-primary-transparent;
@@ -43,19 +45,18 @@ $icon-button-size: 4rem;
 
   .clear-btn {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
-    width: $icon-button-size;
-    height: $icon-button-size;
+    top: 50%;
+    right: 0;
     text-align: center;
     visibility: hidden;
+    transform: translateY(-50%);
 
     &__icon {
       color: $theme-primary-transparent;
       font-size: $icon-button-size;
       line-height: $icon-button-size;
-      width: 100%;
-      height: 100%;
+      width: $icon-button-size;
+      height: $icon-button-size;
     }
   }
 
