--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -42,7 +42,12 @@
     @extend %flex-normal-pattern;
 
     padding-bottom: 1rem;
-    margin: 0 1rem 2rem;
+    padding-left: 2rem;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: $board-main-bg-darken;
+    width: 100%;
     border-bottom: 1px solid $font-white;
     cursor: pointer;
   }
@@ -70,9 +75,14 @@
   }
 
   &__content {
-    padding: 0 0.8rem;
+    padding: 0.8rem;
     height: 100%;
     overflow-y: auto;
+  }
+
+  &__item:not(:last-child) {
+    display: block;
+    margin-bottom: 2rem;
   }
 
   &__btn--add-task {
