--- a/project-management-app/src/app/core/components/footer/footer/footer.component.scss
+++ b/project-management-app/src/app/core/components/footer/footer/footer.component.scss
@@ -18,7 +18,7 @@
       max-width: 9rem;
     }
     &-svg {
-      fill: $color-white-2;
+      fill: $color-white-darken;
       transition: all 0.4s;
     }
 
@@ -34,7 +34,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: $color-white-2;
+    color: $color-white-darken;
     font-weight: 300;
     font-size: 2.6rem;
     pointer-events: none;
