--- a/project-management-app/src/app/shared/components/header/header/header.component.scss
+++ b/project-management-app/src/app/shared/components/header/header/header.component.scss
@@ -14,7 +14,7 @@ $header-height: 9rem;
   left: 0;
   z-index: 50;
   padding: 0 3rem;
-  border-bottom: 2px solid $color-white-2;
+  border-bottom: 2px solid $color-white-darken;
   transition: all 0.3s ease-in-out;
   background-color: $form-bg;
   display: flex;
@@ -26,7 +26,7 @@ $header-height: 9rem;
   font-weight: 300;
 
   &.sticky {
-    background-color: $color-white-2;
+    background-color: $color-white-darken;
     box-shadow: 0px 4px 6px 2px $shadow-color;
     height: 7rem;
   }
@@ -49,11 +49,11 @@ $header-height: 9rem;
     }
 
     &.mat-checked .mat-slide-toggle-thumb {
-      background-color: $color-white-2;
+      background-color: $color-white-darken;
     }
 
     & .mat-slide-toggle-bar {
-      background-color: $color-white-2;
+      background-color: $color-white-darken;
     }
 
     & .mat-slide-toggle-thumb {
