--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -11,13 +11,13 @@
 %big-text-pattern {
   font-weight: 700;
   color: $font-white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 %normal-text-pattern {
   font-weight: 500;
   color: $font-white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 %flex-column-pattern {
@@ -78,7 +78,7 @@
       border-radius: $border-radius;
       background-image: $dialog-confirmation-bg;
       background-size: 200%;
-      background-position: center center;
+      background-position: center;
       transition: all 0.5s;
       opacity: 0.97;
 
