--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -3,18 +3,18 @@
   class="board__edit-button">edit</mat-icon>
   <span [class.active]="!boardEditMode" class="board__title">&nbsp; {{ board?.title }}</span>
   <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form">
-    <mat-icon title="Save" (click)="boardNameChange(boardTitleInput.value)" #titleInput class="board__save-button">save</mat-icon>
+    <mat-icon title="Save" (click)="boardNameChange($event, boardTitleInput.value=boardTitleInput.value.trim())" #titleInput class="board__save-button">save</mat-icon>
     <span>&nbsp;</span>
     <mat-form-field appearance="fill" class="board-input-form">
       <mat-label >board title editing</mat-label>
-      <input matInput type="text" formControlName="userTitle" #boardTitleInput>
+      <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="inputStatus=true">
       <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
         <mat-icon>close</mat-icon>
       </button>
-      <div *ngIf="cardForm.controls['userTitle'].invalid && cardForm.controls['userTitle'].touched">
-        <span *ngIf="userTitle!.errors?.['required']">The title is required</span>
+      <div *ngIf="cardForm.controls['userTitle'].touched">
+        <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The title is required</span>
         <span *ngIf="userTitle!.errors?.['minlength']">The title is too short</span>
-        <span *ngIf="!userTitle!.errors?.['required'] && !userTitle!.errors?.['minlength']">The title is too long</span>
+        <span *ngIf="userTitle!.errors?.['maxlength']">The title is too long</span>
       </div>
     </mat-form-field>
   </form>
