--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -2,11 +2,23 @@
 <div class="main__container" (mousemove)="mouseMove()" (click)="mouseClick()">
   <div class="main__header-container">
     <h1>Boards</h1>
-    <button class="main__search-button" (click)="searchMouseClick($event)" (mousemove)="searchMouseMove($event)">
+    <button class="main__search-button" (click)="searchMouseClick()" appMouseMoveStopPropagation>
       &dArr; Search &dArr;
     </button>
     <div [class.active]="searchContainerDisplay" class="main__search-container">
+      <div class="main__inner-search-container">
 
+
+        <!-- <mat-form-field appearance="fill" class="board-input-form">
+          <mat-label >text for search</mat-label>
+          <input matInput type="text" #searchInput>
+          <button matSuffix mat-icon-button aria-label="Clear" (click)="searchInput.value=''; searchMouseMove($event);">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field> -->
+
+
+      </div>
     </div>
   </div>
   <div class="main__inner-container">
