--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -107,7 +107,7 @@
   @include scrollbar(8px);
   overflow-x: hidden;
   overflow-y: scroll;
-  background-color: #363062;
+  background-color: $color-white-2;
   transition: height 0.5s;
   z-index: 1000;
 
@@ -121,7 +121,7 @@
     width: 100%;
     height: 100%;
     border-radius: inherit;
-    border: solid 2px $board-main-bg;
+    border: solid 2px #363062;
   }
 }
 
@@ -137,7 +137,7 @@
 }
 
 .board-input-form {
-  font-size: 2rem;
+  font-size: 3rem;
   width: 100%;
 }
 
