--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,19 +1,21 @@
 <div (click)="boardRout($event)">
   <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
-  class="board__edit-button">edit</mat-icon>
+    class="board__edit-button" appMouseMoveStopPropagation appMouseClickStopPropagation>edit</mat-icon>
   <span [class.active]="!boardEditMode" class="board__title">&nbsp; {{ board?.title }}</span>
-  <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form">
+  <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form" appMouseMoveStopPropagation
+    appMouseClickStopPropagation>
     <mat-icon title="Save" (click)="boardNameChange($event, boardTitleInput.value=boardTitleInput.value.trim());"
-    appMouseMoveStopPropagation #titleInput class="board__save-button">save</mat-icon>
+      #titleInput class="board__save-button">save</mat-icon>
     <span>&nbsp;</span>
     <mat-form-field appearance="fill" class="board-input-form">
-      <mat-label >board title editing</mat-label>
+      <mat-label>board title editing</mat-label>
       <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="inputStatus=true">
       <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
         <mat-icon>close</mat-icon>
       </button>
       <div *ngIf="cardForm.controls['userTitle'].touched">
-        <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The title is required</span>
+        <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The title
+          is required</span>
         <span *ngIf="userTitle!.errors?.['minlength']">The title is too short</span>
         <span *ngIf="userTitle!.errors?.['maxlength']">The title is too long</span>
       </div>
