--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -1,23 +1,30 @@
 <app-header></app-header>
 <div class="main__container" (mousemove)="mouseMove()" (click)="mouseClick()">
-  <div class="main__header-container">
+  <div class="main__header-container" appMouseMoveStopPropagation appMouseClickStopPropagation>
     <h1>Boards</h1>
-    <button class="main__search-button" (click)="searchContainerDisplay = !searchContainerDisplay"
-      appMouseMoveStopPropagation appMouseClickStopPropagation>
+    <button class="main__search-button" (click)="searchContainerDisplay = !searchContainerDisplay">
       &dArr; Search &dArr;
     </button>
     <div [class.active]="searchContainerDisplay" class="main__search-container">
       <div class="main__inner-search-container">
-
-
         <mat-form-field appearance="fill" class="board-input-form">
           <mat-label>text for search</mat-label>
           <input matInput type="text" #searchInput>
-          <button matSuffix mat-icon-button aria-label="Clear"
-            (click)="searchInput.value=''" appMouseMoveStopPropagation appMouseClickStopPropagation>
-            <mat-icon>close</mat-icon>
+          <button matSuffix mat-icon-button aria-label="Clear" (click)="searchInput.value=''">
+            <mat-icon class="main__reset-button-icon">close</mat-icon>
           </button>
         </mat-form-field>
+        <button mat-mini-fab color="primary" [matMenuTriggerFor]="menu" title="Make Search" class="main__make-search-button">
+          <mat-icon class="main__make-search-icon">search</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="after" class="user-menu">
+          <button mat-menu-item>Task Number Search</button>
+          <button mat-menu-item>Task Title Search</button>
+          <button mat-menu-item>Task User Search</button>
+          <button mat-menu-item>Task Description Search</button>
+        </mat-menu>
+
+
 
 
       </div>
