--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -39,7 +39,8 @@
     color: white;
     transition: box-shadow 0.3s, color 0.3s;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: $theme-accent;
       box-shadow: 0 0.8rem 0.8rem -0.4rem $theme-accent-transparent;
     }
@@ -97,7 +98,7 @@
 
 .main__search-container {
   position: absolute;
-  @extend %flex-centre-pattern;
+  @extend %flex-column-pattern;
   bottom: 0;
   right: 0;
   width: calc(50%);
@@ -108,18 +109,21 @@
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: $color-white-2;
+  opacity: 0;
   transition: height 0.5s;
   z-index: 1000;
 
   &.active {
-    height: 500px;
+    height: 70vh;
     padding: 1rem;
     padding: 2rem;
+    opacity: 1;
   }
 
   &.active .main__inner-search-container {
     width: 100%;
     height: 100%;
+    @extend %flex-column-pattern;
     border-radius: inherit;
     border: solid 2px #363062;
   }
@@ -141,8 +145,34 @@
   width: 100%;
 }
 
-@media screen and (max-width: $mobile) {
-  .board-input-form {
-    width: 250px;
+.main__reset-button-icon {
+  width: 5rem;
+}
+
+.main__make-search-button {
+  width: 10rem;
+  height: 10rem;
+  margin-top: -2rem;
+  transition: box-shadow 0.3s, transform 0.3s;
+
+  &:hover {
+    @extend %hover-grey-pattern;
   }
+}
+
+.mat-menu-item {
+  @extend %normal-text-pattern;
+  font-size: 2rem;
+  color: $font-black;
+  transition: background-color 0.2s;
+
+  &:hover {
+    background-color: $theme-primary-transparent;
+  }
+}
+
+.mat-icon {
+  font-size: 4rem;
+  width: 4rem;
+  height: 4rem;
 }
