refactor: move header to the core module

--- a/project-management-app/src/app/core/components/header/header/header.component.html
+++ b/project-management-app/src/app/core/components/header/header/header.component.html
@@ -1,4 +1,4 @@
-<div appStickyHeader class="header">
+<div appStickyHeader class="header" *ngIf="isAuth$ | async">
   <app-logo></app-logo>
   <app-create-button></app-create-button>
   <app-user-box></app-user-box>
