--- a/project-management-app/src/app/user/pages/profile-page/profile-page.component.html
+++ b/project-management-app/src/app/user/pages/profile-page/profile-page.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="user-data">
-        <app-tabs></app-tabs>
+        <app-tabs [profile]="profile"></app-tabs>
       </div>
     </div>
   </div>
