--- a/project-management-app/src/app/boards/components/board/column/column.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/column.component.scss
@@ -23,18 +23,14 @@
 
   &__scrollable {
     @include scrollbar(8px);
-
+    max-height: calc(100vh - 38rem);
+    height: 100%;
     margin-bottom: 1rem;
-    max-height: calc(100vh - 338px);
     overflow-y: auto;
     overflow-x: hidden;
 
-    @media screen and (max-width: $tablet) {
-      max-height: calc(100vh - 282px);
-    }
-
     @media screen and (max-width: $mobile) {
-      max-height: calc(100vh - 338px);
+      max-height: calc(100vh - 50rem);
     }
   }
 
@@ -76,13 +72,12 @@
 
   &__content {
     padding: 0.8rem;
-    height: 100%;
     overflow-y: auto;
   }
 
   &__item:not(:last-child) {
     display: block;
-    margin-bottom: 2rem;
+    margin-bottom: 1.7rem;
   }
 
   &__btn--add-task {
