--- a/project-management-app/src/app/boards/components/board/column/task/task.component.scss
+++ b/project-management-app/src/app/boards/components/board/column/task/task.component.scss
@@ -24,8 +24,8 @@
     @extend %flex-normal-pattern;
 
     &__add-btn {
-      min-width: 30px;
-      width: 40px;
+      min-width: 3rem;
+      width: 4rem;
       display: flex;
       justify-content: center;
     }
