--- a/project-management-app/src/app/app.component.html
+++ b/project-management-app/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main-content">
+  <app-header class="sticky"></app-header>
   <router-outlet></router-outlet>
   <app-footer class="footer"></app-footer>
 </div>
